fix: flickering page and css issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @font-face {
   font-family: "DungGeunMo";
@@ -20,11 +17,6 @@ html {
 
 body {
   margin: 0;
-  /* padding: 10px 20px; */
-  background-color: rgb(23, 23, 23);
-  /* background-color: rgb(41, 41, 45); */
-  color: white;
-  font-family: "DungGeunMo", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
